--- a/main.css
+++ b/main.css
@@ -1,5 +1,12 @@
 h1 {
   color: blue;
+  text-align: center;
+}
+
+.players {
+  padding-left: 10px;
+  display: flex;
+  flex-direction: column;
 }
 
 .row {
@@ -12,4 +19,21 @@ h1 {
   width: 80px;
   background-color: gray;
   margin: 10px;
+}
+
+.container {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.playerContainer {
+  display: flex;
+  justify-content: space-around;
+}
+
+.eachPlayer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
